# MLOps

./: .ds_app.py.swp  Dockerfile  README.md  ds_app.py  pyproject.toml  requirements.txt
data/raw/: btc_usd.csv
docs/: source_book.txt
notebooks/: feature_engineering.ipynb  ml_models.ipynb  ml_models_2.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/09b7a75d3b8f41e09304fe0c101a17c9/: meta.yaml
notebooks/mlruns/0/0c5a9313f34d4a4c8957ef90d4b44ca7/: meta.yaml
notebooks/mlruns/0/0d4f17a82fe3445ba8784a72e18df9c1/: meta.yaml
notebooks/mlruns/0/1b6c69c7c708411ebb87add7631a436c/: meta.yaml
notebooks/mlruns/0/421e2f9f072a429b8bb44d6a44c1db47/: meta.yaml
notebooks/mlruns/0/5194b3478f1e423ab30ffdb90007d76a/: meta.yaml
notebooks/mlruns/0/70db93a22622466e848f87df1842310f/: meta.yaml
notebooks/mlruns/0/7e570dcbc3844740a4d88980cf0a2369/: meta.yaml
notebooks/mlruns/0/8bd7952b119f485da47be2dbe6b283aa/: meta.yaml
notebooks/mlruns/0/8d7c37b65a5943b5b057f81f87984aea/: meta.yaml
notebooks/mlruns/0/b9656b1192d64483bb30ecfbbd53f6a9/: meta.yaml
notebooks/mlruns/0/c2669c73726749cf8ea37dd0e1702502/: meta.yaml
reports/logs/: raw_data_logs.json
reports/models_logs/: runs.csv
src/Models/: ml_models.ipynb
src/Models/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/data/: db_operations.py  etl.py  read_db.py  write_db.py
src/features/: feature_engineering.ipynb  feature_engineering.py  feature_selection.ipynb
src/utils/: raw_data_logs.py  relative_paths.py
src/visualization/: btc_visualization.ipynb
(+165 files in other folders)
