[tool.poetry]
name = "bitcoin-forecast"
version = "0.1.0"
description = ""
authors = ["muratmertguler <muratmertguler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
