[tool.poetry]
name = "bitcoin-forecast"
version = "0.1.0"
description = ""
authors = ["muratmertguler <muratmertguler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.0"
alpaca = "^1.0.0"
alpaca-py = "^0.16.0"
sqlalchemy = "^2.0.28"
mlflow = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
